--- a/templates/home.html
+++ b/templates/home.html
@@ -28,8 +28,7 @@
 				<h3>Instructions</h3>
 				<ul id="instructions">
 					<li>Login to your Spotify account.
-					<li>Enter the playlist owner's username and the playlist link 
-						into the form. 
+					<li>Enter the playlist owner's username and the playlist link into the form. 
 					<li>Select TSV to export the data to .tsv format. 
 				</ul>
 			</div>
