--- a/templates/home_connected.html
+++ b/templates/home_connected.html
@@ -29,18 +29,14 @@
 						</div>
 					</form>
 				</div>
-				<div id="buttons">
-					<button id="connected" pointer-events="none">Connected</button>
-					<button id="refresh" onClick="window.location.href='http://localhost:5000/refresh';">Refresh Token</button>
-				</div>
 			</div>
 			<div id="footer">
 				<h3>Instructions</h3>
 				<ul id="instructions">
-					<li>Login to your Spotify account.
-					<li>Enter the playlist owner's username and the playlist link 
+					<li>1. Login to your Spotify account.
+					<li>2. Enter the playlist owner's username and the playlist link 
 						into the form. 
-					<li>Select TSV to export the data to .tsv format. 
+					<li>3. Select TSV to export the data to .tsv format. 
 				</ul>
 			</div>
 		</div>
