--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 			</div>
 			<div id="body">
 				<div id="buttons">
-					<button onClick="window.location.href='/login';">
+					<button onClick="window.location.href='https://bff-exportify.herokuapp.com/login';">
 						Connect to Spotify
 					</button>
 					{% if value == "error" %}
